# HGCal_simple

./: .gitignore  CMakeLists.txt  README.md  g4macro_vis.mac  steering.py  yourMainApplication.cc
compact/: hgcal_simple.xml  materials.xml
dd4hep_plugin/: hgcal_info.hpp  layered_detector.cpp
inc/: YourEventAction.hh  YourSteppingAction.hh
src/: YourActionInitialization.cc  YourDetectorConstruction.cc  YourEventAction.cc  YourSteppingAction.cc
